tests/errors/union_undefined_member.dang
type Cat {
  pub name: String!
}

union Pet = Cat | Unicorn
